--- a/thesis/maga.tex
+++ b/thesis/maga.tex
@@ -916,7 +916,6 @@ All the BCI recordings were done on the author of the thesis, that means that on
 Considering that we did not reach our goal accuracy of 99\% in multi-attempt approach, it would be reasonable to try running in such a mode where the user has to repeat the attempts for as long as it takes to reach 99\% accuracy. Once this mode is implemented we will run the experiments on multiple test subjects to estimate the number of attempts and time per action required to reach 99\% accuracy.
 
 \newpage
-\input{maga-bbl.bbl}
 \bibliographystyle{unsrt}
 \bibliography{maga-bbl}
 
@@ -935,7 +934,7 @@ Considering that we did not reach our goal accuracy of 99\% in multi-attempt app
 \newpage
 \section*{Appendix B: Source code repository URL}
 The source code for the given implementation is stored in GitHub public repository:
-\url{https://github.com/jevgeniS}
+\url{https://github.com/jevgeniS/multiattempt-bci}
 \addcontentsline{toc}{section}{Appendix B}
 
 \pagebreak
